base/infra/ingress/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: npvet-frontend-ingress
  namespace: npvet-prod
  annotations:
    kubernetes.io/ingress.class: "gce" 
spec:
  rules:
    - host: npvet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: npvet-frontend
                port:
                  number: 80
